# learn-rust-with-cli

./: Cargo.toml  README.md
rust-by-example/: Cargo.toml
rust-by-example/src/: lib.rs
rust-by-example/src/attribute/: cfg.rs  crate.rs  mod.rs  unused.rs
rust-by-example/src/cargo/: build_scripts.rs  conventions.rs  deps.rs  mod.rs  test.rs
rust-by-example/src/compatibility/: mod.rs  raw_identifiers.rs
rust-by-example/src/conversion/: from_into.rs  mod.rs  string.rs  try_from_try_into.rs
rust-by-example/src/crates/: executable.rs  lib.rs  mod.rs  rary.rs  using_lib.rs
rust-by-example/src/custom_types/: constants.rs  enums.rs  mod.rs  structs.rs
rust-by-example/src/error/: iter_result.rs  mod.rs  multiple_error_types.rs  option_unwrap.rs  panics.rs  result.rs
rust-by-example/src/expression/: mod.rs
rust-by-example/src/flow_control/: fors.rs  if_else.rs  if_let.rs  loops.rs  matchs.rs  mod.rs  while_let.rs  whiles.rs
rust-by-example/src/functions/: closures.rs  diverging.rs  hof.rs  methods.rs  mod.rs
rust-by-example/src/generics/: assoc_items.rs  bounds.rs  gen_fn.rs  gen_trait.rs  impls.rs  mod.rs  multi_bounds.rs  new_types.rs  phantom.rs  wheres.rs
rust-by-example/src/hello/: comment.rs  hello_world.rs  mod.rs  print.rs  print_display.rs  print_display_testcase_list.rs  print_fmt.rs
rust-by-example/src/macros/: dry.rs  dsl.rs  mod.rs  syntax.rs  variadics.rs
rust-by-example/src/meta/: doc.rs  mod.rs  playpen.rs
rust-by-example/src/modules/: mod.rs  split.rs  struct_visibility.rs  uses.rs  (+2 more)
rust-course/: Cargo.toml
rust-course/src/: lib.rs
(+180 files in other folders)
