[workspace]
resolver = "2"
members = [
    "cli",
    "rust-by-example",
    "rust-course",
    "rust-by-practice",
    "rust-algos",
]

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.bench]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size