[package]
name = "rust-by-example"
version = "0.1.0"
edition = "2018"
authors = ["JmJones <yang.jmj@gmail.com>"]
description = "Learn rust with cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "3.0.0-beta.5"
