[package]
name = "rust-course"
version = "0.1.0"
edition = "2021"
authors = ["JmJones <yang.jmj@gmail.com>"]
description = "Learn rust with cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "3.0.0-beta.5"

[dependencies.colored]
version = "2.0.0"

[dependencies.num]
version = "0.4.0"

[dependencies.chrono]
version = "0.4"

[dependencies.twox-hash]
version = "1.6.3"